--- a/DB_Test/Pages/Shared/LayoutAdmin.cshtml
+++ b/DB_Test/Pages/Shared/LayoutAdmin.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Учёт знаний студентов</title>
+    <title>@ViewData["Title"] - Понель администратора</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/DB_Test.styles.css" asp-append-version="true" />
@@ -21,33 +21,8 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between" style="text-align: center;">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Institutes">Институты</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/ResultTestAdmin">Результаты теста</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Specialties">Специальности</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Groups">Группы</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Disciplines">Дисциплины</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/GroupDisciplineLink">Связь ГД</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Students">Студенты</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Questions">Вопросы</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Tests">Тесты</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/ResultTests">Результаты теста</a>
-                        </li>
-                        
                     </ul>
                 </div>
             </div>
