--- a/DB_Test/Pages/ResultTestAdmin.cshtml
+++ b/DB_Test/Pages/ResultTestAdmin.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model DB_Test.Pages.ResultTestAdminModel
 @{
-
+     Layout = "LayoutAdmin";
 }
 <div class="container">
      <div class="d-flex d-flex align-items-end" style="justify-content: space-between;">
