--- a/DB_Test/Pages/Shared/_Layout.cshtml
+++ b/DB_Test/Pages/Shared/_Layout.cshtml
@@ -12,13 +12,13 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
+            <div class="d-flex container justify-content-between">
                 <a class="navbar-brand" asp-area="" asp-page="/StartPagecshtml">[Учёт знаний студентов]</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between" style="text-align: center;">
+                <div class="collapse d-sm-inline-flex justify-content-between" style="text-align: center;">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Institutes">Институты</a>
@@ -47,8 +47,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/ResultTests">Результаты теста</a>
                         </li>
-                        
                     </ul>
+                </div>
+                <div>
+                    <a class="btn btn-primary" asp-area="" asp-page="/Index">Выйти</a>
                 </div>
             </div>
         </nav>
