Fix Add Institute

--- a/DB_Test/Pages/Institutes.cshtml
+++ b/DB_Test/Pages/Institutes.cshtml
@@ -40,8 +40,8 @@
       <div id="AddForm">
           <form method="post" asp-page-handler="AddInst" > 
               <div class="modal-body">
-                    <label asp-for="InstituteName" class="col-form-label">Введите название института:</label>
-                    <input asp-for="InstituteName" class="form-control" id="recipient-name">
+                    <label asp-for="instituteName" class="col-form-label">Введите название института:</label>
+                    <input asp-for="instituteName" class="form-control" id="recipient-name">
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
